--- a/src/app/carusel/carusel.html
+++ b/src/app/carusel/carusel.html
@@ -1,4 +1,5 @@
-<div class="flex overflow-hidden w-auto  fadeinright animation-duration-1000 animation-iteration-infinite-none">
+<div class="flex overflow-hidden w-auto  fadeinright animation-duration-1000 animation-iteration-infinite-none pl-6
+">
   <div class="flex-grow-1 flex align-items-center justify-content-center m-2 px-5 py-3 justify-content-between">
     <img src="img/angular.png" class="w-4rem" />
     <img src="img/aws.png" class="w-4rem" />
