--- a/src/app/principal/principal.css
+++ b/src/app/principal/principal.css
@@ -10,8 +10,7 @@
 .page .main {
     max-width: 1120px;
     width: 100%;
-    margin: 0 auto;
-    padding: 2.5rem 1.5rem 4rem;
+    margin: 1rem 2rem 1rem 4rem;
 }
 
 .page section {
