--- a/src/app/principal/principal.html
+++ b/src/app/principal/principal.html
@@ -2,6 +2,19 @@
   <app-header></app-header>
   <app-carusel></app-carusel>
 
+<a
+  href="https://wa.me/573001234567"
+  target="_blank"
+  class="whatsapp-btn"
+>
+  <img
+    src="image-removebg-preview (1).png"
+    alt="WhatsApp"
+    class="whatsapp-img"
+  />
+</a>
+
+  
   <main class="main">
     <!-- HERO / PRESENTACIÓN -->
     <section class="hero">
@@ -16,8 +29,8 @@
           </p>
           <div class="hero-actions">
             <a
-              href="https://wa.me/+573145332988"
-              target="_blank"
+              href="#contact"
+              
               class="p-button p-button-rounded p-button-lg primary no-underline"
             >
               <i class="pi pi-send"></i> Contáctame
