despliegue en git

--- a/src/app/carusel/carusel.html
+++ b/src/app/carusel/carusel.html
@@ -1,6 +1,6 @@
-<div class="flex overflow-hidden w-auto  fadeinright animation-duration-1000 animation-iteration-infinite-none pl-6
-">
-  <div class="flex-grow-1 flex align-items-center justify-content-center m-2 px-5 py-3 justify-content-between">
+<!-- <div class="flex overflow-hidden w-auto  fadeinright animation-duration-1000 animation-iteration-infinite-none pl-6
+"> -->
+<!-- <div class="flex-grow-1 flex align-items-center justify-content-center m-2 px-5 py-3 justify-content-between">
     <img src="img/angular.png" class="w-4rem" />
     <img src="img/aws.png" class="w-4rem" />
         <img src="img/Postman.svg" class="w-2rem" />
@@ -9,5 +9,30 @@
     <img src="img/JavaScript (1).svg" class="w-2rem" />
     <img src="img/mysql.png" class="w-5rem" />
     <img src="img/py.png" class="w-3rem" />
+  </div> -->
+
+<!-- </div> -->
+ <div class="overflow-hidden">
+  <div class="flex">
+    <div class="flex align-items-center justify-content-center  font-bold  border-round"> <img
+        src="img/angular.png" class="w-4rem" /></div>
+    <div class="flex align-items-center justify-content-center m-1 font-bold  border-round"> <img
+        src="img/aws.png" class="w-4rem" /></div>
+    <div class="flex align-items-center justify-content-center m-2 font-bold border-round"> <img
+        src="img/Postman.svg" class="w-2rem" /></div>
+    <div class="flex align-items-center justify-content-center m-1 font-bold  border-round"> <img
+        src="img/Git.svg" class="w-2rem" /></div>
+
+
+  </div>
+  <div class="flex">
+    <div class="flex align-items-center justify-content-center m-3 font-bold border-round"> <img
+        src="img/JavaScript (1).svg" class="w-2rem" /></div>
+    <div class="flex align-items-center justify-content-center m-1 font-bold border-round"> <img
+        src="img/mysql.png" class="w-5rem" /></div>
+    <div class="flex align-items-center justify-content-center m-1 font-bold border-round"> <img
+        src="img/Java-Light.svg" class="w-2rem" /></div>
+    <div class="flex align-items-center justify-content-center font-bold border-round"> <img
+        src="img/py.png" class="w-3rem" /></div>
   </div>
 </div>
