--- a/src/app/principal/principal.css
+++ b/src/app/principal/principal.css
@@ -185,7 +185,7 @@
     color: #d1d5db;
 }
 
-/* Contacto */
+/* Contacto card */
 .page .contact-card-wrapper {
     max-width: 480px;
 }
@@ -198,7 +198,7 @@
     display: flex;
     align-items: center;
     gap: 0.6rem;
-    padding: 0.2rem 0;
+    padding: 0.4rem 0;
     color: #e5e7eb;
 }
 
@@ -215,7 +215,7 @@
 }
 
 .whatsapp-img {
-  width: 60px;
+  width: 65px;
   height: 50px;
   cursor: pointer;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -223,8 +223,10 @@
 
 /* Responsivo */
 @media (max-width: 768px) {
+    /* NOMBRE DEL Y STACK */
     .page .main {
-        padding-inline: 1rem;
+     margin: 1rem auto;
+    padding: 0 3rem;
     }
 
     .page .hero-content {
